# ctflgrdiff

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
demo/: foo_int.c  foo_long.c  twofunc_a.c  twofunc_b.c
difflib/: Cargo.toml
difflib/src/: lib.rs  llvm.rs
difflib/src/goblin_yax/: arm32.rs  arm64.rs  mod.rs  x86_32.rs
pylib/: Cargo.toml  pyproject.toml
pylib/src/: lib.rs
src/: llvm.rs  main.rs
src/goblin_yax/: avr.rs  mod.rs  x86_64.rs
