[package]
name = "ctflgrdifflib"
version = "0.1.0"
edition = "2021"

[dependencies]
cpp_demangle = "^0.4"
crossterm = "^0.25"
goblin = "^0.6"
llvm-ir = { version = "^0.8", features = ["llvm-14"] }
num-traits = "^0.2"
rustc-demangle = "^0.1"
yaxpeax-arch = "^0.2"
yaxpeax-arm = "^0.2"
yaxpeax-avr = "^0.1"
yaxpeax-x86 = "^1.1"
