[package]
name = "pyctflgrdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyctflgrdiff"
crate-type = ["cdylib"]

[dependencies]

ctflgrdifflib = { path = "../difflib" }
pyo3 = { version = "0.17.1", features = ["extension-module"] }